# avail-sesame

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml  scrutinizer-config.toml
Sesame/: Cargo.toml
Sesame/core/: Cargo.toml
Sesame/core/src/: lib.rs
Sesame/core/src/policy/reflection/visitor/: visitor.rs
Sesame/lints/src/: sesame_pcr.rs
avail/: .dockerignore  Dockerfile
avail/src/: commands.rs  ifc.rs  main.rs
avail/src/events/: microsoft.rs  mod.rs
lints/: Cargo.toml  rust-toolchain.toml
scripts/: docker-build.sh
scrutils/: Cargo.toml
scrutils/src/: lib.rs
scrutils/src/analyzer/: mod.rs
scrutils/src/selector/: ppr.rs
scrutinizer/: Cargo.toml
scrutinizer/scripts/: scrutinizer-run
scrutinizer/scrutils/src/analyzer/: deps.rs
scrutinizer/scrutils/src/body_cache/: mod.rs
scrutinizer/src/: lib.rs
src/: commands.rs  ifc.rs  main.rs
src/datetime/: finder.rs
src/events/: google.rs  mod.rs
test-crate/: Cargo.toml  scrutinizer-config.toml
