[package]
name = "avail"
description = "A command-line tool to find available times between all your calendars."
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
anyhow = "=1.0.66"
async-trait = "=0.1.58"
chrono = "=0.4.22"
clap = { version = "=4.0.18", features = ["derive"] }
colored = "=2.0.0"
console = "=0.15.2"
copypasta = "=0.8.1"
ctrlc = { version = "=3.2.3", features = ["termination"] }
dialoguer = { version = "=0.10.2", features = ["fuzzy-select"] }
dirs = "=4.0.0"
futures = "=0.3.25"
indicatif = "=0.17.1"
itertools = "=0.10.5"
keyring = "=1.2.0"
native-tls = "=0.2.10"
oauth2 = "=4.2.3"
proc-macro-crate = "=1.2.1"
rusqlite = { version = "=0.28.0", features = ["bundled"] }
regex = "=1.6.0"
reqwest = { version = "=0.11.10", features = ["json"] }
serde = "=1.0.144"
serde_json = "=1.0.87"
h2 = "=0.3.14"
hashlink = "=0.8.1"
hyper = "=0.14.5"
idna = "=0.2.3"
tokio = { version = "=1.23.0", features = ["full"] }
tokio-native-tls = "=0.3.0"
tokio-util = "=0.7.4"
toml = "=0.5.9"
url = "=2.3.0"
webbrowser = "=0.8.0"
